# gs2026

./: .gitattributes  .gitignore  README.md  add_index_today.py  add_index_today_v3.py  alter_notice_table.py  alter_notice_table2.py  alter_notice_table3.py  alter_notice_table4.py  alter_notice_table5.py  analyze_000925.py  analyze_000925_direction.py  analyze_000925_full.py  analyze_000925_real_reason.py  analyze_000967.py  analyze_000967_new_scheme.py  analyze_301396_new_scheme.py  analyze_api_performance.py  analyze_core_issues.py  analyze_direction_price_contradiction.py  analyze_morning_session.py  analyze_retail_ratio_issue.py  analyze_stock_ranking_api.py  check_000925_source.py  check_000967_at_time.py  check_20260424_simple.py  check_all_zq_keys.py  check_analysis_table.py  check_api.py  check_apqd_structure.py  check_bond_columns.py  check_bond_structure.py  check_bond_table.py  check_bond_tables.py  check_brackets.py  check_cache.py  check_cache_bond.py  check_cache_meta.py  check_code_match.py  check_concepts.py  (+163 more)
config/: validation_tasks.yaml
configs/: settings.yaml  validation_tasks.yaml  wencai_cookies.json
configs/scheduler_jobs/: mysql_long_query_monitor.json
docs/: AI分析模块MySQL批量插入优化总结.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_2025-03-25.md  DECORATORS_GUIDE.md  DESIGN_CONTROL_PAGE.md  Git提交与代码集成实施方案.md  P1性能优化方案.md  P2-B统一数据清洗方案.md  P2-D大盘统计优化方案.md  P2-D影响深度分析.md  P2-D验证结果.md  P2深度性能优化分析.md  README.md  USAGE.md  baostock_performance_analysis.md  bond_code_missing_analysis.md  calculate_industry_topn_optimization.md  data_bond_ths_issue_analysis.md  db_profiler_issue_analysis.md  dirs.txt  main_confidence列名错误分析.md  non_intrusive_perf_tools_design.md  performance_analysis_design.md  report-center-design.md  slow_log_implementation_summary.md  tts_optimization_design.md  work_summary_2026-03-27_to_2026-03-30.md  主力净额展示修复方案.md  主力净额覆盖范围分析.md  主力净额计算-字符串问题修复方案.md  主力净额计算逻辑修复方案v2.md  主力净额计算逻辑修复方案v3.md  主力净额计算逻辑详解.md  主力净额计算问题分析.md  列名冲突问题分析.md  历史数据填充-并行方案.md  向量化优化深度分析.md  多方案修复对比.md  完整流程分析与修复方案.md  (+22 more)
docs/01-架构设计/: Dashboard2集成方案.md  WebSocket通知设计.md  债券绿名单系统设计.md  导航统一化设计.md  报告中心设计V2.md  报告中心设计V3.md  报告中心设计V4.md  系统架构设计.md  进程监控设计.md  采集模块设计.md  重构计划.md
docs/01-需求与设计/: 公告分析V2-原型v3.html  公告分析V2-原型v4.html  公告分析V2-界面原型.html  公告分析V2开发工作记录.md  公告分析V2设计方案.md  公告分析评分优化方案.md  公告原文抓取工具设计方案.md  分析中心系统设计方案.md  新闻分析优化方案.md  新闻分析时间范围设计.md  涨停分析前端设计方案.md  涨停分析时间字段修复方案.md  涨停分析详情展示设计方案-v2.1.md  涨停分析详情展示设计方案-v2.md
docs/02-性能优化/: API性能深度分析.md  TTS优化总结.md  TTS最佳实践研究.md  TTS阅读修复总结.md  性能优化计划.md  性能监控UI设计.md  性能监控使用指南.md  索引添加影响评估.md  组合排行优化.md  自动索引优化设计.md
docs/03-后端服务/: DeepSeek敏感词拒绝应答优化方案.md  数据监控时间轴双源查询设计.md  新闻分析数据质量保障方案对比.md  新闻分析数据验证方案.md  新闻分析深度分析字段_数据库变更.sql  新闻分析深度分析字段设计.md  新闻分析热点板块逻辑变更记录.md  离线数据验证工具设计方案.md  离线数据验证工具设计方案v2_函数传参版.md  离线数据验证工具设计方案v3_YAML配置版.md
docs/03-数据采集/: 任务执行设计.md  债券绿名单系统实现.md  债券采集优化.md  市场趋势分析设计.md  股票实时数据优化设计.md  股票日线采集重设计.md  调度器任务类型设计.md  采集进程列表重构设计.md
docs/04-前端界面/: Dashboard2分析设计.md  Dashboard2股债映射设计.md  Dashboard2调度器设计.md  baostock_collection_v2_并发优化设计.md  上攻排行排序Bug修复方案-20260423.md  命中行概展示优化方案-4列+紧凑布局.md  报告中心EPUB支持设计.md  数据监控页面排序功能设计.md  新闻分析领域分析热门板块点击功能修复设计.md  最新消息API分析.md  涨停分析市场筛选功能设计.md  涨停分析股票筛选功能优化设计.md  涨停行概选股-Bug修复记录-20260423.md  涨停行概选股-工作成果总结-20260427.md  涨停行概选股功能设计.md  (+19 more)
migrations/: add_scheduler_job_types.sql
requirements/: README.md  base.txt  dev.txt  docs.txt  local.txt  prod.txt  test.txt
scripts/: analyze_605222.py  analyze_mine_clearance.py  check_progress.py  create_report_tables.sql  diagnose_000539.py  fill_cumulative_main_net.py  fill_main_force_data.py  fill_main_force_fast.py  fill_main_force_sql.py  fill_main_force_tick.py  fill_main_force_top30.py  fill_ranking_stocks.py  generate_stock_bond_mapping.py  migrate_cumulative_main_net.sql  migrate_main_force_fields.sql  overnight_risk_analyzer.py  test_single_stock.py  test_tick_rule.py  verify_000539.py  verify_trend_lag.py
sql/: stock_bond_industry_mapping.sql  stock_bond_industry_mapping_simple.sql
temp/: analyze_innodb_transactions.py  analyze_mysql_performance.py  analyze_mysql_simple.py  check_baostock_status.py  check_bond_all.py  check_bond_daily.py  check_bond_price.py  check_bond_price2.py  check_bond_stats.py  check_bond_table.py  check_mysql_connections.py  check_table_structure.py  cleanup_mysql_connections.py  find_bond_tables.py  kill_idle_transactions.py  mysql_full_analysis.py  news_cls_debug.py  optimize_phase1_2.py  optimize_transactions_safe.py  run_akshare_risk_20260327_170143.py  run_akshare_risk_20260407_115056.py  run_bk_gn_20260327_101719.py  run_cls_history_20260402_224121.py  run_event_driven.py  run_news_cls_20260326_fftv.py  run_news_cls_debug.py  run_news_cls_direct.py  run_news_combine_20260326_it1w.py  run_news_ztb.py  run_notice.py  run_notice_risk_20260327_170153.py  run_notice_risk_20260330_021115.py  run_notice_risk_20260407_024717.py  run_notice_risk_20260407_115037.py  run_notice_risk_20260408_171402.py  run_standalone.bat  run_wencai_risk_daily_20260327_170155.py  run_wencai_risk_daily_20260330_094506.py  run_wencai_risk_daily_20260407_115051.py  run_wencai_risk_daily_20260413_080541.py  (+13 more)
tests/: check_div_balance.py  check_env.py  check_html_structure.py  compare_tabs.py  diagnose_news_cls.py  diagnose_news_cls2.py  final_check.py  find_extra_div.py  list_divs.py  run_tests.py  test_cls_daemon.py  test_cls_direct.py  test_cls_direct2.py  test_cls_once.py  test_control_html.py  test_decorators.py  test_deepseek_analysis.py  test_deepseek_combine_collection.py  test_deepseek_combine_ztb_area.py  test_deepseek_deepseek_analysis_event_driven.py  test_deepseek_deepseek_analysis_news_cls.py  test_deepseek_deepseek_analysis_news_combine.py  test_deepseek_deepseek_analysis_news_ztb.py  test_deepseek_deepseek_analysis_notice.py  test_import_cls.py  test_process_monitor.py  test_redis_pool.py  test_redis_write.py  test_wencai_cookie_v2.py  test_wrapper_v2.py  test_zt_zb.py
tools/: README.md  api_tester.py  cache_manager.py  create_analysis_tables.py  db_inspector.py  env_checker.py  redis_checker.py  table_validator.py
(+376 files in other folders)
