[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gs2026"
version = "2026.1.0"
description = "股票数据采集分析系统 - 2026版"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "zhangqiang", email = "m17600700886@163.com"}
]
keywords = ["stock", "finance", "data-analysis", "akshare", "quant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"
dependencies = [
    # 数据处理
    "pandas>=2.2.0",
    "numpy>=2.2.0",
    "pyarrow>=19.0.0",
    # 数据采集
    "adata>=2.9.0",
    "akshare>=1.18.0",
    "baostock>=0.8.9",
    "tushare>=1.4.0",
    "requests>=2.32.0",
    "aiohttp>=3.13.0",
    # 数据库
    "SQLAlchemy>=2.0.0",
    "mysql-connector-python>=8.0.0",
    "PyMySQL>=1.1.0",
    "redis>=5.0.0",
    # 浏览器自动化
    "playwright>=1.58.0",
    "selenium>=4.0.0",
    # 配置与工具
    "PyYAML>=6.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    # 日志与CLI
    "loguru>=0.7.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    # 其他工具
    "python-dateutil>=2.9.0",
    "pytz>=2025.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.0.0",
    "flake8>=7.0.0",
    "pylint>=3.3.0",
    "mypy>=1.14.0",
    "isort>=6.0.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "faker>=35.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.0",
]
prod = [
    "gunicorn>=23.0.0",
    "prometheus-client>=0.21.0",
    "sentry-sdk>=2.20.0",
]

[project.scripts]
gs2026 = "gs2026.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/gs2026"
Documentation = "https://gs2026.readthedocs.io"
Repository = "https://github.com/yourusername/gs2026"
Issues = "https://github.com/yourusername/gs2026/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gs2026*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
gs2026 = ["configs/*.yaml", "configs/*.yml"]

# ========== Black 代码格式化 ==========
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = "\\.pyi?$"
extend-exclude = """
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
"""

# ========== isort 导入排序 ==========
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["gs2026"]

# ========== MyPy 类型检查 ==========
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = [
    "tests/",
    "docs/",
]

# ========== Pytest 测试配置 ==========
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ========== Coverage 覆盖率 ==========
[tool.coverage.run]
source = ["src/gs2026"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# ========== Pylint 代码检查 ==========
[tool.pylint.messages_control]
disable = [
    "C0103",  # 变量命名不规范
    "C0114",  # 缺少模块文档字符串
    "C0115",  # 缺少类文档字符串
    "C0116",  # 缺少函数文档字符串
    "R0903",  # 类方法太少
    "R0913",  # 参数太多
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 8
max-attributes = 15
