[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gs2026"
version = "2026.4.1"
description = "股票数据采集分析系统 - 2026版"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "zhangqiang", email = "m17600700886@163.com"}
]
keywords = ["stock", "finance", "data-analysis", "akshare", "quant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"
dependencies = [
    # 数据处理
    "pandas>=2.2.0",
    "numpy>=2.2.0",
    "pyarrow>=19.0.0",
    # 数据采集
    "adata>=2.9.0",
    "akshare>=1.18.0",
    "baostock>=0.8.9",
    "tushare>=1.4.0",
    "yinhedata>=1.3.0",
    "requests>=2.32.0",
    "urllib3>=2.6.0",
    "certifi>=2025.1.0",
    "charset-normalizer>=3.4.0",
    "idna>=3.10",
    "aiohttp>=3.13.0",
    "aiodns>=3.5.0",
    "aiohappyeyeballs>=2.6.0",
    "aiosignal>=1.4.0",
    # 数据库
    "SQLAlchemy>=2.0.0",
    "mysql-connector-python==8.0.21",
    "PyMySQL>=1.1.0",
    "aiomysql>=0.3.0",
    "mysqlclient>=2.2.0",
    "redis>=5.0.0",
    # 浏览器自动化
    "playwright>=1.58.0",
    "selenium>=4.0.0",
    "pyee>=13.0.0",
    # 配置与工具
    "PyYAML>=6.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    # 日志与CLI
    "loguru>=0.7.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "colorama>=0.4.0",
    # 其他工具
    "python-dateutil>=2.9.0",
    "pytz>=2025.1",
    "tzdata>=2025.2",
    "psutil>=7.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "html5lib>=1.1",
    "soupsieve>=2.6",
    "bs4>=0.0.2",
    "OpenCC>=1.2.0",
    "opencc-python-reimplemented>=0.1.7",
    "swifter>=1.4.0",
    # 文件处理
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "pillow>=11.0.0",
    "pefile>=2023.2.0",
    # 网络
    "websocket-client>=1.8.0",
    "curl_cffi>=0.14.0",
    "pycares>=4.9.0",
    # 数据序列化
    "simplejson>=3.19.0",
    "ujson>=5.10.0",
    "jsonpath>=0.82.0",
    "jsonpointer>=2.1",
    "json5>=0.12.0",
    # 文本处理
    "pypinyin>=0.55.0",
    # 并发
    "nest-asyncio>=1.6.0",
    "gevent>=24.2.0",
    "greenlet>=3.1.0",
    # 数据结构
    "attrs>=25.3.0",
    "frozenlist>=1.6.0",
    "multidict>=6.4.0",
    "yarl>=1.20.0",
    # 工具
    "packaging>=24.2",
    "platformdirs>=4.3.0",
    "zipp>=3.21.0",
    # 兼容性
    "six>=1.17.0",
    "future>=1.0.0",
    "typing_extensions>=4.13.0",
    "dill>=0.3.9",
    "cloudpickle>=3.1.0",
    # 其他
    "tabulate>=0.9.0",
    "ccxt>=4.4.0",
    "cryptography>=45.0.0",
    "PyJWT>=2.11.0",
    # Dashboard Web框架
    "flask>=3.0.0",
    "werkzeug>=3.0.0",
    "jinja2>=3.1.0",
    "markupsafe>=2.1.0",
    "itsdangerous>=2.1.0",
    "click>=8.1.0",
    "blinker>=1.7.0",
    # WebSocket 实时通信
    "flask-socketio>=5.3.0",
    "python-socketio>=5.9.0",
    "simple-websocket>=1.0.0",
    # 任务调度
    "APScheduler>=3.11.0",
]

[project.optional-dependencies]
dev = [
    # 测试框架
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "coverage>=7.6.0",
    "faker>=35.0.0",
    # 代码质量
    "black>=25.0.0",
    "isort>=6.0.0",
    "flake8>=7.0.0",
    "pylint>=3.3.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    # 文档工具
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.0",
    # 调试工具
    "jedi>=0.19.0",
    "python-lsp-server>=1.12.0",
]

[project.scripts]
gs2026 = "gs2026.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/gs2026"
Documentation = "https://gs2026.readthedocs.io"
Repository = "https://github.com/yourusername/gs2026"
Issues = "https://github.com/yourusername/gs2026/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gs2026*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
gs2026 = ["configs/*.yaml", "configs/*.yml"]

# ========== Black 代码格式化 ==========
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = "\\.pyi?$"
extend-exclude = """
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
"""

# ========== isort 导入排序 ==========
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["gs2026"]

# ========== MyPy 类型检查 ==========
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = [
    "tests/",
    "docs/",
]

# ========== Pytest 测试配置 ==========
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--ignore=tests/test_deepseek_*.py",  # 忽略 deepseek 测试文件（需手动运行）
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ========== Coverage 覆盖率 ==========
[tool.coverage.run]
source = ["src/gs2026"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# ========== Pylint 代码检查 ==========
[tool.pylint.messages_control]
disable = [
    "C0103",  # 变量命名不规范
    "C0114",  # 缺少模块文档字符串
    "C0115",  # 缺少类文档字符串
    "C0116",  # 缺少函数文档字符串
    "R0903",  # 类方法太少
    "R0913",  # 参数太多
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 8
max-attributes = 15
